--- a/frontend/my-app/src/Components/Contact.css
+++ b/frontend/my-app/src/Components/Contact.css
@@ -23,33 +23,76 @@
     flex: 1;
     background-color: #e4dfda;
     padding: 3rem;
-    display:  flex;
+    display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 3rem;
+  }
+  
+  .contact-info .header-container {
+    display: flex; /* لجعل الصورة والعنوان في نفس السطر */
+    align-items: center; /* محاذاة الصورة والعنوان عموديًا */
+  }
+  
+  .contact-info .container-img {
+    width: 45px;
+    height: 45px;
+    background-color: #e4dfda;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+    border-radius: 15%;
+    margin-right: 10px; /* المسافة بين الصورة والعنوان */
+  }
+  
+  .contact-info .container-img img {
+    width: 25px;
+    height: 25px;
   }
   
   .contact-info h2 {
-    color: #d4b483;
-    font-size: 1.8rem;
+    color: #0d0d0d;
+    font-size: 2rem;
     margin-bottom: 0.5rem;
   }
   
   .contact-info p {
-    color: #48a9a6;
-    font-size: 1rem;
+    color: #5a5a5a;
+    font-size: 1.2rem;
+    margin-top: -5px;
   }
-
-
   
   .contact-info a {
-    color: #d4b483;
+    color: #af9265;
+    font-size: 1.2rem;
+    /* margin-top: -2px; */
+  }
+
+  .social-icons {
+    display: flex;
+    justify-content: left;
+    gap: 20px;
+    margin-top: 2rem; 
+  }
+  .social-icons img{
+    width: 25px;
+    width: 25px;
+  }
+  
+  .social-icons a {
+    color: #2d2a2a;
     text-decoration: none;
   }
+  
+  .social-icons a:hover {
+    color: #d4b483; /* تغيير اللون عند المرور فوق الأيقونة */
+  }
+  
   
   .contact-form {
     flex: 1;
     background-color: #4357ad;
-    padding: 3rem;
+    padding: 8rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -65,7 +108,7 @@
   
   .contact-form p {
     color: #48a9a6;
-    font-size: 1rem;
+    font-size: 1.3rem;
     text-align: center;
   }
   
@@ -161,3 +204,5 @@
   .contact-form button:hover {
     background-color: #00a0b0;
   }
+
+
