--- a/frontend/my-app/src/Components/Contact.css
+++ b/frontend/my-app/src/Components/Contact.css
@@ -77,6 +77,8 @@
   .social-icons img{
     width: 25px;
     width: 25px;
+    filter: brightness(50%) contrast(70%);
+
   }
   
   .social-icons a {
@@ -240,7 +242,7 @@
     }
 
     .social-icons {
-        justify-content: center;
+        /* justify-content: center; */
         gap: 10px;
     }
 
