--- a/frontend/my-app/src/components/Contact.css
+++ b/frontend/my-app/src/components/Contact.css
@@ -53,7 +53,9 @@
   .contact-info h2 {
     color: #3f3f3f;
     font-size: 2rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1.5rem;
+    text-align: start;
+
   }
   
   .contact-info p {
