--- a/frontend/my-app/src/components/Product.css
+++ b/frontend/my-app/src/components/Product.css
@@ -29,7 +29,7 @@
 
 .product-image img {
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
     height: auto;
     border-radius: 8px;
     transform: scale(1);
@@ -63,7 +63,7 @@
 
 .product-rating .star {
 
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     margin-right: 2px;
 }
 
@@ -187,6 +187,7 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+
 .product-reviews h1 {
     color: #4357ad;
     margin-bottom: 2rem;
@@ -227,7 +228,7 @@
     border-radius: 5%;
     flex: 0 0 auto;
     text-align: center;
-    width: 250px;
+    width: 350px;
     margin-bottom: 1rem;
     padding: 1rem;
     display: flex;
@@ -304,4 +305,10 @@
 
     
     
+}
+.books-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 30px; 
+    justify-content: center; 
 }
